Fix header jump on mobile

--- a/src/styles/commons.scss
+++ b/src/styles/commons.scss
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-  position: relative;
   @media (min-width: 720px) {
     height: 100vh;
     min-height: 700px;
@@ -32,7 +31,6 @@ body {
 }
 
 .root {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
